--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -161,7 +161,7 @@
     gap: 50px;
 }
 
-.advantages-body .section {
+.advantages-body .section-advantages {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.3);
@@ -169,7 +169,7 @@
     box-shadow: var(--box-shadow-1);
 }
 
-.section .section-header {
+.section-advantages .section-header {
     display: grid;
     width: 100%;
     height: 25%;
@@ -196,7 +196,7 @@
     padding: 1rem 2rem;
 }
 
-.advantages-body .section .section-text p {
+.advantages-body .section-advantages .section-text p {
     font-size: 1.35rem;
     color: var(--color-3);
 }
@@ -247,7 +247,7 @@
     gap: 15px;
 }
 
-.services-sections .section {
+.services-sections .section-services {
     width: 25vw;
     height: 60vh;
     background-color: var(--background-5);
